# gamelibs-mimalloc

./: .gitignore  Makefile  meson.build
ide/vs2022/: mimalloc.sln
include/: mimalloc.h
include/mimalloc/: atomic.h  internal.h  types.h
msvc/: mimalloc.vcxproj  mimalloc.vcxproj.filters
src/: alloc.c  arena.c  init.c  os.c  stats.c
src/prim/: prim.c
src/prim/unix/: prim.c
